updated README.txt
git-svn-id: https://svn.apache.org/repos/asf/chemistry/opencmis/trunk@1493793 13f79535-47bb-0310-9956-ffa450edef68